// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Header correctly 1`] = `
<header>
  <h1>
    Expensify
  </h1>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    exact={true}
    to="/"
  >
    Dashboard
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/create"
  >
    Create Expense
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/edit"
  >
    Edit Expensive
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/help"
  >
    Help
  </NavLink>
</header>
`;

exports[`test Should render Header correctly 1`] = `
<header>
  <h1>
    Expensify
  </h1>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    exact={true}
    to="/">
    Dashboard
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/create">
    Create Expense
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/edit">
    Edit Expensive
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/help">
    Help
  </NavLink>
</header>
`;
